Fix wrapping when not loaded

--- a/src/widgets/Weather.css
+++ b/src/widgets/Weather.css
@@ -19,6 +19,7 @@
 .day {
   flex: 1 1 0;
   display: flex;
+  min-width: 28px;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
